# intro-js-exercises

./: .eslintrc  .gitignore  LIVECODETASKS.md  README.md  jest.config.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: lint-js-files.yml  test-part1.yml  test-part2.yml  test-part3.yml  test-part4.yml
__tests__/: test_part1.js  test_part2.js  test_part3.js  test_part4.js
data/: routes.txt  stops.txt  trips.txt
exercises/part1-fizzbuzz/: index.html  index.js
exercises/part2-basic-functions/: index.html  index.js
exercises/part3-iterators/: index.html  index.js
exercises/part4-functions-as-values/: index.html  index.js
site/: index.html
site/css/: styles.css
site/data/: stops.js  universitycity.js
site/js/: main.js  stops-map.js
